--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,16 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Python cache
+__pycache__/
+*.py[cod]
+*.so
+
+# Data files
+*.csv
+data/
+
+# OS files
+.DS_Store
+Thumbs.db
